Fix dark mode toggle error

--- a/client/src/Index.module.css
+++ b/client/src/Index.module.css
@@ -17,7 +17,7 @@
   right: clamp(0.75rem, 2vw, 1.5rem);
   width: calc(3rem * var(--scale));
   height: calc(3rem * var(--scale));
-  display: inline-flex;
+  display: none;
   align-items: center;
   justify-content: center;
   color: var(--clr-border);
